# gamejam-2021-noir

./: Cargo.toml  index.html
.github/workflows/: release.yaml
game_plugin/: Cargo.toml
game_plugin/src/: camera.rs  consts.rs  fanta.rs  fps_counter.rs  lib.rs  mouse_pos.rs  score.rs  scoreboard.rs  ui.rs
game_plugin/src/background/: background.frag  background.vert  mod.rs
src/: main.rs
