[package]
name = "game_plugin"
version = "0.1.0"
authors = ["Andre Julius <noromoron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    #"bevy_kira_audio/ogg"
]

native = [
    "bevy/bevy_wgpu",
]

[dependencies]
bevy = { version = "0.5.0", default-features = false }
#bevy_kira_audio = { version = "0.4.0" }
rand = "0.8.3"
bevy_prototype_lyon = "0.3"

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3